# MediaTransparencyAustria

./: CHANGELOG.md  LICENSE  MediaTransparencyAustria.cabal  README.md  media.json  overview.txt  payers.txt  recipients.txt
app/: Main.hs
src/: MediaTransparencyAustria.hs  Net.hs
